<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CallingNumber</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">请输入用户名</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="phonenum">手机号:</string>
    <string name="name">姓名:</string>
    <string name="email">email:</string>
    <string name="sending_request">正在发送请求</string>
    <string name="login">登 录</string>
    <string name="account">输入账号</string>
    <string name="myaccount">我的账号</string>
    <string name="edit">修改</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="import_this">导入</string>
    <string name="export_this">导出</string>

</resources>