<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color_deep"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/head_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/head_default"
                android:contentDescription="@drawable/head_default" />

            <TextView
                android:id="@+id/name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/head_view"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/name_textview"
                android:layout_below="@+id/name_textview"
                android:inputType="text"
                android:textColor="@color/text_color"
                android:textIsSelectable="true"
                android:textSize="12sp" />
        </RelativeLayout>

        <include
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            layout="@layout/line" >
        </include>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonenum" />

            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </LinearLayout>

        <include
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            layout="@layout/line" >
        </include>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:inputType="textWebEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/line" >
            </include>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            style="?android:attr/buttonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_return"
            style="?android:attr/buttonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>