<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget33"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@drawable/f1" >
    </ImageView>

    <LinearLayout
        android:id="@+id/linerlayout"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/user_image"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_showname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/name"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="left"
                android:textIsSelectable="true"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_showmobilephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/phonenum"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_mobilephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="left"
                android:textIsSelectable="true"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_showemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/email"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_eamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="left"
                android:textIsSelectable="true"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/user_mark"
        android:layout_width="60dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@drawable/checkmark"
        android:src="@drawable/checkmark"
        android:visibility="gone" >
    </ImageView>

</RelativeLayout>